Ensure text remains visible during webfont load

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,7 @@ body {
   font-style: normal;
   font-weight: 500;
   src: url(/fonts/IBMPlexSans-Regular.ttf) format("truetype");
+  font-display: swap;
 }
 
 @font-face {
@@ -24,6 +25,7 @@ body {
   font-style: normal;
   font-weight: 600;
   src: url(/fonts/IBMPlexSans-SemiBold.ttf) format("truetype");
+  font-display: swap;
 }
 
 @font-face {
@@ -31,6 +33,7 @@ body {
   font-style: normal;
   font-weight: 700;
   src: url(/fonts/IBMPlexSans-Bold.ttf) format("truetype");
+  font-display: swap;
 }
 
 a {
